--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -3,12 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_graph"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/alumnosFragment">
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.mariotorrese.proyecto_412.fragments.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_mainFragment"
+            app:destination="@id/mainFragment" />
+    </fragment>
     <fragment
         android:id="@+id/alumnosFragment"
         android:name="com.mariotorrese.proyecto_412.ui.alumnos.AlumnosFragment"
@@ -23,4 +27,21 @@
         android:name="com.mariotorrese.proyecto_412.ui.alumnos.DeatilAlumnoFragment"
         android:label="fragment_deatil_alumno"
         tools:layout="@layout/fragment_deatil_alumno" />
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.mariotorrese.proyecto_412.ui.login.MainFragment"
+        android:label="fragment_main"
+        tools:layout="@layout/fragment_main" >
+        <action
+            android:id="@+id/action_mainFragment_to_alumnosFragment"
+            app:destination="@id/alumnosFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_asistenciaFragment"
+            app:destination="@id/asistenciaFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/asistenciaFragment"
+        android:name="com.mariotorrese.proyecto_412.ui.asistencia.AsistenciaFragment"
+        android:label="fragment_asistencia"
+        tools:layout="@layout/fragment_asistencia" />
 </navigation>
